[gd_scene load_steps=2 format=3 uid="uid://bpsr7njj1j6ks"]

[ext_resource type="Script" path="res://menu/Menu.gd" id="1_ko56k"]

[node name="Menu" type="Node"]
script = ExtResource("1_ko56k")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PlayButton" type="MenuButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.568973, 0.568973, 0.568973, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
text = "Jouer"

[node name="PlayEndlessButton" type="MenuButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
disabled = true
text = "Play (endless)"

[node name="HighscoresButton" type="MenuButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
disabled = true
text = "Highscores"

[node name="QuitButton" type="MenuButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.568973, 0.568973, 0.568973, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
text = "Quitter"
